// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget Header render should change status label is collapsed is falsy 1`] = `
<header data-test="widget-header" role="button" tabindex="0" class="widget-header">
  <section class="widget-header-control">
    <h3 class="widget-header-title">
      balance
    </h3> <span data-test="widget-header-status" class="widget-header-status">
      Show less
    </span>
  </section>
  <spinner-stub size="24"></spinner-stub>
</header>
`;

exports[`Widget Header render should correctly render 1`] = `
<header data-test="widget-header" role="button" tabindex="0" class="widget-header">
  <section class="widget-header-control">
    <h3 class="widget-header-title">
      balance
    </h3> <span data-test="widget-header-status" class="widget-header-status">
      Show more
    </span>
  </section>
  <spinner-stub size="24"></spinner-stub>
</header>
`;
